--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "servor ./ index.html --reload --browse",
+    "blob": "servor ./ imgToBlob.html --reload --browse",
     "test": "sh build/test.sh",
     "build": "sh build/build.sh"
   },
